# causalscm

./: CONTRIBUTING.md  README.md  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linux_conda.yml
causalscm/: __init__.py  cgm.py  scm.py  to_delete.py
causalscm/algorithms/: cliques.py  d_separation.py  dag.py
causalscm/tests/: test_cgm.py  test_scm.py
