[metadata]
name = causalscm
version = attr: causalscm.__version__
url = https://github.com/adam2392/causalscm
author = Adam Li
maintainer = Adam Li
maintainer_email = adam2392@gmail.com
description = CausalSCM: Structural causal modeling in Python.
keywords = causal inference, causality, structural modeling
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  License :: OSI Approved
  Topic :: Software Development
  Topic :: Scientific/Engineering
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
python_requires = ~= 3.8
install_requires =
  numpy >= 1.16.0
  scipy >= 1.2.0
  networkx
  pgmpy
  setuptools
packages = find:
include_package_data = True

[options.extras_require]
full =
  matplotlib >= 3.1.0
  joblib >= 1.0

[bdist_wheel]
universal = true

[flake8]
exclude = __init__.py
ignore = W504,I101,I100,I201
per-file-ignores =
    causalscm/tests/test_*.py:E402

[tool:pytest]
addopts =
    --showlocals --durations=20 -ra --junit-xml=junit-results.xml
    --ignore=doc --ignore=examples
filterwarnings =
    error
    # This is for Python 3.10+
    ignore:The distutils package is deprecated.*:DeprecationWarning

[pydocstyle]
convention = pep257
match_dir = ^(?!\.|doc|examples).*$
add-ignore = D100,D104,D107,D413
add-select = D214,D215,D404,D405,D406,D407,D408,D409,D410,D411
ignore-decorators = property

[coverage:run]
omit =
    # Do not include test script in coverage report
    *tests*

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
